Adding last practice.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Session401">
         <activity
+            android:name=".SixthActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".MapActivity"
             android:exported="true"
             android:label="@string/title_activity_maps">
